--- a/site/css/style.css
+++ b/site/css/style.css
@@ -22,16 +22,15 @@ body {
   font-family: Roboto Mono;
   margin: 0px;
   background-color: lightsteelblue;
-}
-.headerBg {
-  color: white;
   background-image: url(../images/header_fon.jpg);
-  height: 400px;
   background-repeat: no-repeat;
   background-position: left;
   background-color: #020305;
   background-attachment: fixed;
   background-size: cover;
+}
+.headerBg {
+  color: white;
 }
 .headerFlex {
   display: flex;
@@ -39,7 +38,7 @@ body {
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
-  height: 400px;
+  height: 420px;
 
   padding-right: 10%;
   text-align: center;
@@ -76,62 +75,69 @@ body {
 }
 
 .logoItemsFlex {
-  padding: 0cm 0.5cm;
+  margin: 0cm 0.5cm;
 }
 .logoItemsFlex img {
-  height: 5cm;
-  width: 5cm;
+  height: 150px;
+  width: 150px;
 }
 .mainFlex {
   display: flex;
   margin: auto;
-  max-width: 1200px;
+  max-width: 72%;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   flex-wrap: nowrap;
   align-content: space-around;
-  padding-bottom: 2%;
 }
-.mainFlex3Rows {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: center;
-  align-items: center;
-}
+
 .mainFlex3Columns-2Rows-Style {
   background-color: black;
   color: white;
 }
+
+.mainFlexColumnsImg {
+  margin-left: 30%;
+}
 .mainFlex3Columns-1Rows-Style {
   border: 1px solid lightblue;
-  padding-left: 2%;
   text-align: center;
-  margin-top: 4%;
-  margin-left: 2%;
-  margin-right: 2%;
-  min-width: 40%;
+  padding-left: 2%;
+  margin: 4% 2%;
+  max-width: 30%;
 }
-.mainFlex3Columns {
+.mainFlexColumns {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-around;
   align-content: center;
+  margin: auto;
 }
-.mainFlex3Columns-2Rows {
+#mainFlexColumItems {
+  align-items: center;
+}
+.mainFlexRows {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: center;
-  padding: 2% 2%;
 }
 .mainFlexButton {
   margin: 3% auto;
 }
 .mainFlexTitle {
+  margin: auto;
+}
+.mainFlexText {
+  padding: 2% 2%;
+}
+
+hr {
+  color: blue;
+  width: 90%;
   margin: auto;
 }
 .mainFlex3Columns h2 {
@@ -144,11 +150,34 @@ body {
 .mainBg {
   background-color: white;
 }
-.mainImgStyle {
-  width: 477px;
+.imgSizeSmall {
+  width: 50px;
+  height: 50px;
+}
+.imgSizeMiddle {
+  width: 500px;
   height: 300px;
 }
-
+.mainFlex table {
+  border: 1px solid blue;
+  border-spacing: 0px;
+}
+.mainFlex table td {
+  border: 1px solid blue;
+}
+.trFlexCaption {
+  text-align: center;
+}
+.tdFlexText {
+  padding: 1% 1%;
+}
+.trBg {
+  background-color: black;
+  color: white;
+}
+.formFlex {
+  display: none;
+}
 .footerBorder {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   border-width: 5px 7px;
@@ -172,5 +201,15 @@ body {
   background-color: white;
 }
 .footerFlexText {
-  margin-right: 1cm;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-content: center;
+  margin: auto;
+  padding-right: 2%;
+  max-width: 70%;
+}
+.footerFlexTextStyle {
+  background-color: white;
 }
