--- a/site/css/style.css
+++ b/site/css/style.css
@@ -18,9 +18,31 @@
       url("../fonts/roboto-mono-v13-latin_cyrillic-regular.svg#RobotoMono")
       format("svg"); /* Legacy iOS */
 }
+/* Убираем внешние отступы */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+  padding: 0;
+}
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   font-family: Roboto Mono;
-  margin: 0px;
   background-color: lightsteelblue;
   background-image: url(../images/header_fon.jpg);
   background-repeat: no-repeat;
@@ -28,6 +50,7 @@ body {
   background-color: #020305;
   background-attachment: fixed;
   background-size: cover;
+  height: 100%;
 }
 .headerBg {
   color: white;
@@ -47,6 +70,8 @@ body {
 .navFlex {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  margin: 0px;
 }
 .navFlex ul {
   display: flex;
@@ -190,6 +215,7 @@ hr {
   justify-content: space-between;
   align-content: center;
   padding: 0.5cm 0.5cm;
+  flex: 100%;
 }
 
 .footerFlex img {
@@ -206,10 +232,235 @@ hr {
   flex-wrap: nowrap;
   justify-content: flex-end;
   align-content: center;
-  margin: auto;
+  margin: 0 auto;
   padding-right: 2%;
-  max-width: 70%;
+  
 }
 .footerFlexTextStyle {
   background-color: white;
+}
+@media (max-width: 1076px) {
+  .mainFlexText {
+    font-size: 0.9rem;
+    text-align: center;
+  }
+  .navFlex {
+    flex: 100%;
+  }
+  .footerFlex {
+    flex: 100%;
+  }
+}
+
+@media (max-width: 1027px) {
+  .navLiFlex {
+    margin-right: 1cm;
+    padding: 0.1cm 0.3cm;
+  }
+}
+@media (max-width: 952px) {
+  .navLiFlex {
+    margin-right: 1cm;
+    padding: 0.1cm 0.2cm;
+  }
+  .mainFlexColumns {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    margin: auto;
+  }
+  .imgSizeMiddle {
+    margin-top: 2%;
+  }
+}
+@media (max-width: 914px) {
+  .navLiFlex {
+    margin-right: 1cm;
+    padding: 0.1cm 0.1cm;
+  }
+}
+@media (max-width: 876px) {
+  .navFlex ul {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    margin: 0;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .liItemsBorder:last-child {
+    border: none;
+  }
+}
+@media (max-width: 768px) {
+  .imgSizeMiddle {
+    display: none;
+  }
+  .navFlex {
+    height: 100px;
+  }
+  .mainFlexColumns {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    margin: auto;
+  }
+  .mainFlex3Columns-1Rows-Style:last-child {
+    text-align: center;
+
+    white-space: pre-line;
+  }
+
+  .logoItemsFlex img {
+    display: none;
+  }
+  .mainFlexText {
+    font-size: 11px;
+    text-align: justify;
+    display: -webkit-box;
+    -webkit-line-clamp: 40;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .mainFlex {
+    height: 100%;
+  }
+  .mainFlexColumns {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    margin: auto;
+  }
+  .mainFlex3Columns-1Rows-Style {
+    font-size: 11pt;
+    min-width: 60%;
+  }
+  #mediaCompetetion0,#mediaCompetetion1{
+    display: none;
+
+  }
+}
+
+@media (max-width: 745px) {
+  #mediaCompetetion0,#mediaCompetetion1{
+    display: none;
+
+  }
+  .mainFlexText {
+    margin: 4% auto;
+
+    font-size: 11px;
+    text-align: justify;
+    display: -webkit-box;
+    -webkit-line-clamp: 40;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .mainFlex {
+    height: 100%;
+    
+  }
+  .imgSizeMiddle {
+    display: none;
+  }
+}
+@media (max-width: 606px) {
+  .navFlex {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0px;
+    height: 200px;
+  }
+  .navFlex ul {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    margin: 0;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+  .liItemsBorder {
+    border-left: none;
+    border-bottom: 1px solid black;
+  }
+  .mainFlexText {
+    font-size: 11px;
+    text-align: justify;
+    display: -webkit-box;
+    -webkit-line-clamp: 40;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .mainFlexRows .imgSizeSmall{
+    display: none;
+  }
+  .mainFlex table td {
+    position: relative;
+    display: block;
+  }
+  .mainFlex table td::before {
+    content: attr(data-label) ": ";
+    position: relative;
+    left: 2%;
+}
+@media (max-width: 540px) {
+  .footerFlex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    padding: 0.5cm 0.5cm;
+    flex: 100%;
+  }
+  .mainFlexText {
+    font-size: 11px;
+    text-align: justify;
+    display: -webkit-box;
+    -webkit-line-clamp: 40;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+@media (max-width: 425px) {
+  .mainFlexText {
+    font-size: 11px;
+    text-align: justify;
+    display: -webkit-box;
+    -webkit-line-clamp: 25;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .mainFlex {
+    height: 100%;
+  }
+  .mainFlexColumns {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    margin: auto;
+  }
+  .mainFlex3Columns-1Rows-Style {
+    font-size: 11pt;
+    min-width: 60%;
+  }
+  .mainFlex table td {
+    position: relative;
+    display: block;
+  }
+  .mainFlex table td::before {
+    content: attr(data-label) ": ";
+    position: relative;
+    left: 2%;
+  }
 }
